--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ __pycache__
 /__pycache__
 skillNexus/data/__pycache__/views.cpython-312.pyc
 skillNexus/data/__pycache__/urls.cpython-312.pyc
+skillNexus/db.sqlite3
